- Update Service, pagination and config
